# voxer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  NOTICE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
cmake/: ProjectConfigs.cmake  ProjectInstall.cmake  ProjectOptions.cmake  ProjectPackaging.cmake
cmake/generators/: deb.cmake  tgz.cmake
cmake/modules/: AddCxxOpts.cmake  AddEspeakNg.cmake  AddFmt.cmake  AddGoogleTest.cmake  AddGst.cmake  AddLibSndFile.cmake  AddNlohmannJson.cmake  AddOnnxRuntime.cmake  AddPiperPhonemize.cmake  AddSpdLog.cmake  AddUniAlgo.cmake  AddUtfCpp.cmake  BuildLocation.cmake  BuildOptions.cmake  BuildType.cmake  EnableCodeFormat.cmake  FindClangFormat.cmake  FindOnnxRuntime.cmake
cmake/presets/: LegacyPresets.json  VcpkgPresets.json
config/: CMakeLists.txt  VoxerConfig.cmake.in
config/generators/: debFormat.cmake  tgzFormat.cmake
config/options/: CMakeLists.txt  Options.hpp.in
config/package/: CMakeLists.txt  VoxerConfig.cmake.in
config/version/: CMakeLists.txt
config/version/voxer/: Version.cpp.in  Version.hpp
config/voices/: CMakeLists.txt  voices.csv
include/voxer/: DataHandler.hpp  DataSaver.hpp  FileSaver.hpp  FileSavers.hpp  FormattedDataHandler.hpp  FormattedDataSaver.hpp  Types.hpp  Voxer.hpp
scripts/: install-amd64.sh  install-arm64.sh  run-build-env.sh
src/: CMakeLists.txt  DataHandler.cpp  DataSaver.cpp  FileSavers.cpp  FormattedDataHandler.cpp  FormattedDataSaver.cpp  Model.cpp  Model.hpp  PhonemesMatcher.cpp  PhonemesMatcher.hpp  SpeakNgLoader.cpp  SpeakNgLoader.hpp  Synthesizer.cpp  Synthesizer.hpp  SynthesizerEngine.cpp  SynthesizerEngine.hpp  TextTranslator.cpp  TextTranslator.hpp  Types.hpp  Voxer.cpp  VoxerImpl.cpp  VoxerImpl.hpp  WavFileSaver.cpp  WavFileSaver.hpp
test/: CMakeLists.txt  setTestsOptions.cmake
test/src/: TextToAudioTest.cpp  TextToFileTest.cpp  TextToPlaybackTest.cpp  test.cpp
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt
tools/cli/src/: DataOutputStream.cpp  DataOutputStream.hpp  FormattedDataOutputStream.cpp  FormattedDataOutputStream.hpp  main.cpp
